# Bloggr-A-Flask-Web-App

./: README.md  pyproject.toml
bloggr/: __init__.py  auth.py  blog.py  db.py  schema.sql
bloggr/static/: style.css
bloggr/templates/: base.html
bloggr/templates/auth/: change_password.html  forgot_password.html  login.html  profile_page.html  register.html  reset_password.html
bloggr/templates/blog/: detailed_view.html  index.html
bloggr/templates/email/: base.html  reset_password.html  welcome.html
bloggr/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
