[project]
name = "bloggr"
version = "1.0.0"
description = "A basic blogging app built with python and flask"
dependencies = [
   "Authlib==1.6.6",
   "blinker==1.9.0",
   "build==1.4.0",
   "certifi==2026.1.4",
   "cffi==2.0.0",
   "charset-normalizer==3.4.4",
   "click==8.3.1",
   "colorama==0.4.6",
   "coverage==7.13.1",
   "cryptography==46.0.3",
   "e==1.4.5",   
   "Flask==3.1.2",
   "Flask-Mail==0.10.0",
   "gunicorn==24.1.1",
   "idna==3.11",
   "iniconfig==2.3.0",
   "itsdangerous==2.2.0",
   "Jinja2==3.1.6",
   "MarkupSafe==3.0.3",
   "packaging==25.0",
   "pluggy==1.6.0",
   "pycparser==3.0",
   "Pygments==2.19.2",
   "pyproject_hooks==1.2.0",
   "pytest==9.0.2",
   "python-dotenv==1.2.1",
   "requests==2.32.5",
   "urllib3==2.6.3",
   "waitress==3.0.2",
   "Werkzeug==3.1.4",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["bloggr"]
